--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -202,3 +202,17 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
 bUseUETaskGraph=True
 bRecordProfileMarkers=True
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=798A248E4A6BC48E7EE8AD9620797D18
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
